# ProtoScript

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  k8s-deployment.yaml  manage.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
ProtoScript/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
examples/1315622704078000138_20260130_214600/: audio_protocol.flac  meta.json  protocol.md
examples/templates/: default.md.j2  discord.md.j2
protocols/: tests.py
protocols/api/: serializers.py  urls.py  views.py
protocols/core/: s3_storage.py  utils.py
protocols/core/engines/: base.py  factory.py  mock.py  whisper.py
protocols/core/queue/: base.py  celery_queue.py  factory.py
protocols/management/commands/: cleanup_jobs.py
protocols/tests/assets/: GiantTree_103595873841188864.flac  TheMeinerLP_245056131989241857.flac
protocols/worker/: tasks.py
templates/protocols/: default.md.j2  discord.md.j2
